--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-
+<!-- top menu -->
 <div class="ui borderless topmenu menu">
   <div class="ui container">
     <a class="fitted item"><i class="facebook f icon"></i></a>
@@ -33,6 +33,52 @@
 
   </div>
 </div>
+
+
+<img class="ui centered image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/logo.png?12738032654134160651" alt="Island Snow Hawaii" style="border: 0;">
+
+<!-- second menu from top-->
+<div class="ui borderless middlemenu menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown item">
+      <div class="text">Men</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">New</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">Women</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">New</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">Kids</div>
+    </div>
+
+
+    <div class="ui dropdown item">
+      <div class="text">Brands</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">New</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">Search</div>
+    </div>
+
+  </div>
+</div>
+
+
+
+<img class="ui fluid image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?12738032654134160651" alt="Slide 1 Alt Text" draggable="false">
 
 <script>
   $('.ui.dropdown')
