--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
 
 <img class="ui fluid image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?12738032654134160651" alt="Slide 1 Alt Text" draggable="false">
 
+
+<div class="footer-backgrou d">
+
+</div>
 <script>
   $('.ui.dropdown')
       .dropdown()
